--- a/src/_includes/layouts/home.html
+++ b/src/_includes/layouts/home.html
@@ -1,8 +1,15 @@
 {% extends "layouts/base.html" %} 
 
 {% block content %}
-<article>
-  <h1>{{ title }}</h1>
-  {{ content | safe }}
+<article class="intro">
+  <div class="[ intro__header ]">
+    <h1 class="[ intro__heading ]">
+      {{ intro.eyebrow }}
+      <em>{{ intro.main }}</em>
+    </h1>
+  </div>
+  <div class="[ intro__content ] [ flow ]">
+    <p class="intro__summary">{{ intro.summary }}</p>
+  </div>
 </article>
 {% endblock %}
